--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
     "128": "icons/scihub128.png"
   },
   "background": {
-     "page": "background.html"
+     "scripts": ["background.js"],
+     "persistent": false
   }
 }
